add config endpoint with threshold values, add package name to vuln dto
